Update sidebar width

--- a/resources/scss/_custom.scss
+++ b/resources/scss/_custom.scss
@@ -1055,4 +1055,8 @@ a.tag-addon:hover {
   text-decoration: underline!important;
 }
 
+.avatar-name {
+  line-height: 1rem;
+}
+
 /*# sourceMappingURL=backstrap.css.map */
