--- a/resources/scss/_custom.scss
+++ b/resources/scss/_custom.scss
@@ -1059,4 +1059,8 @@ a.tag-addon:hover {
   line-height: 1rem;
 }
 
+.select2-container--bootstrap .select2-results__option--highlighted[aria-selected] {
+  background-color: $primary!important;
+}
+
 /*# sourceMappingURL=backstrap.css.map */
